--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Hexashop Ecommerce HTML CSS Template</title>
+    <title>Jaynicks</title>
 
 
     <!-- Additional CSS Files -->
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="assets/css/lightbox.css">
 <!--
 
-TemplateMo 571 Hexashop
+shoes shop
 
 https://templatemo.com/tm-571-hexashop
 
@@ -100,8 +100,8 @@ https://templatemo.com/tm-571-hexashop
                     <div class="left-content">
                         <div class="thumb">
                             <div class="inner-content">
-                                <h4>We Are Hexashop</h4>
-                                <span>Awesome, clean &amp; creative HTML5 Template</span>
+                                <h4>We Are Jaynicks</h4>
+                                <span>Awesome, Shopping &amp; Quality product</span>
                                 <div class="main-border-button">
                                     <a href="#">Purchase Now!</a>
                                 </div>
