--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-6">
                     <div class="section-heading">
                         <h2>Addidas Latest</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <span>Details to details is what makes Jaynicks different from the other shops.</span>
                     </div>
                 </div>
             </div>
