--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Classic Spring</h4>
-                                    <span>$120.00</span>
+                                    <h4>Jordans</h4>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -253,8 +253,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Air Force 1 X</h4>
-                                    <span>$90.00</span>
+                                    <h4>Jordans</h4>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -299,8 +299,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Classic Spring</h4>
-                                    <span>$120.00</span>
+                                    <h4>Jordans</h4>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
