--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Jordans</h4>
+                                    <h4>Addidas</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -253,7 +253,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Jordans</h4>
+                                    <h4>Addidas</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -276,8 +276,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-03.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Love Nana ‘20</h4>
-                                    <span>$150.00</span>
+                                    <h4>Addidas</h4>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
