--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h2>Addidas Latest</h2>
+                        <h2>addidas Latest</h2>
                         <span>Details to details is what makes Jaynicks different from the other shops.</span>
                     </div>
                 </div>
@@ -230,7 +230,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Addidas</h4>
+                                    <h4>addidas1</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -253,7 +253,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Addidas</h4>
+                                    <h4>addidas2</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -276,7 +276,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-03.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Addidas</h4>
+                                    <h4>addidas3</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -299,7 +299,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Addidas</h4>
+                                    <h4>addidas1</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -347,7 +347,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/women-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>New Green Jacket</h4>
+                                    <h4>jordans1</h4>
                                     <span>$75.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
