--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h2>addidas Latest</h2>
+                        <h2>Addidas Latest</h2>
                         <span>Details to details is what makes Jaynicks different from the other shops.</span>
                     </div>
                 </div>
@@ -230,7 +230,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>addidas1</h4>
+                                    <h4>Addidas</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -250,10 +250,10 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/men-02.jpg" alt="">
+                                    <img src="assets/images/addidas1.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>addidas2</h4>
+                                    <h4>Addidas2</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -273,10 +273,10 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/men-03.jpg" alt="">
+                                    <img src="assets/images/addidas2" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>addidas3</h4>
+                                    <h4>Addidas</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -296,10 +296,10 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/men-01.jpg" alt="">
+                                    <img src="assets/images/addidas3" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>addidas1</h4>
+                                    <h4>Addidas1</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -347,7 +347,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/women-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>jordans1</h4>
+                                    <h4>New Green</h4>
                                     <span>$75.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
