--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/men-01.jpg" alt="">
+                                    <img src="assets/images/addidas2.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
@@ -273,7 +273,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas2" alt="">
+                                    <img src="assets/images/addidas3" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
