--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/women-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>New Green</h4>
-                                    <span>$75.00</span>
+                                    <h4>1ordans1</h4>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -370,8 +370,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/women-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Classic Dress</h4>
-                                    <span>$45.00</span>
+                                    <h4>jordans2</h4>
+                                    <span>Ksh 0045.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
