--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/women-01.jpg" alt="">
+                                    <img src="assets/images/jordans1.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>1ordans1</h4>
+                                    <h4>Jordans</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -367,10 +367,10 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/women-02.jpg" alt="">
+                                    <img src="assets/images/jordans2.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>jordans2</h4>
+                                    <h4>jordans</h4>
                                     <span>Ksh 0045.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
