--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas2.jpg" alt="">
+                                    <img src="assets/images/jordans2.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
@@ -250,7 +250,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas1.jpg" alt="">
+                                    <img src="assets/images/jordans1.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas2</h4>
@@ -273,7 +273,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas3" alt="">
+                                    <img src="assets/images/nikes" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
