--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans1.jpg" alt="">
+                                    <img src="assets/images/addidas1.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Jordans</h4>
@@ -367,7 +367,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans2.jpg" alt="">
+                                    <img src="assets/images/addidas2.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>jordans</h4>
@@ -390,7 +390,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/nikes.jpg" alt="">
+                                    <img src="assets/images/addidas3.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Spring Collection</h4>
