--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ https://templatemo.com/tm-571-hexashop
     <!-- ***** Main Banner Area End ***** -->
 
     <!-- ***** Men Area Starts ***** -->
-    <section class="section" id="men">
+    <section class="section" id="addidas">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -216,8 +216,8 @@ https://templatemo.com/tm-571-hexashop
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="men-item-carousel">
-                        <div class="owl-men-item owl-carousel">
+                    <div class="addidas-item-carousel">
+                        <div class="owl-addidas-item owl-carousel">
                             <div class="item">
                                 <div class="thumb">
                                     <div class="hover-content">
@@ -227,7 +227,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans2.jpg" alt="">
+                                    <img src="assets/images/addidas2.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
@@ -250,7 +250,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans1.jpg" alt="">
+                                    <img src="assets/images/addidas1.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas2</h4>
@@ -273,7 +273,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/nikes" alt="">
+                                    <img src="assets/images/addidas3" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
@@ -344,7 +344,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas1.jpg" alt="">
+                                    <img src="assets/images/jordans1.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Jordans</h4>
@@ -367,7 +367,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas2.jpg" alt="">
+                                    <img src="assets/images/jordans2.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>jordans</h4>
@@ -390,7 +390,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas3.jpg" alt="">
+                                    <img src="assets/images/nikes.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Spring Collection</h4>
