--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ https://templatemo.com/tm-571-hexashop
     </div>
     <!-- ***** Main Banner Area End ***** -->
 
-    <!-- ***** Men Area Starts ***** -->
+    <!-- ***** Addidas Area Starts ***** -->
     <section class="section" id="addidas">
         <div class="container">
             <div class="row">
