--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@ https://templatemo.com/tm-571-hexashop
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="addidas-item-carousel">
-                        <div class="owl-addidas-item owl-carousel">
+                    <div class="men-item-carousel">
+                        <div class="owl-men-item owl-carousel">
                             <div class="item">
                                 <div class="thumb">
                                     <div class="hover-content">
