--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ https://templatemo.com/tm-571-hexashop
     <!-- ***** Main Banner Area End ***** -->
 
     <!-- ***** Addidas Area Starts ***** -->
-    <section class="section" id="addidas">
+    <section class="section" id="men">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
