--- a/index.html
+++ b/index.html
@@ -200,15 +200,14 @@ https://templatemo.com/tm-571-hexashop
         </div>
     </div>
     <!-- ***** Main Banner Area End ***** -->
-
-    <!-- ***** Addidas Area Starts ***** -->
+    <!-- ***** Men Area Starts ***** -->
     <section class="section" id="men">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h2>Addidas Latest</h2>
-                        <span>Details to details is what makes Jaynicks different from the other shops.</span>
+                        <h2>Men's Latest</h2>
+                        <span>Details to details is what makes Hexashop different from the other themes.</span>
                     </div>
                 </div>
             </div>
@@ -227,11 +226,11 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas1.jpg" alt="">
+                                    <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Addidas</h4>
-                                    <span>Ksh 00.00</span>
+                                    <h4>Classic Spring</h4>
+                                    <span>$120.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -250,11 +249,11 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas2.jpg" alt="">
+                                    <img src="assets/images/men-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Addidas2</h4>
-                                    <span>Ksh 00.00</span>
+                                    <h4>Air Force 1 X</h4>
+                                    <span>$90.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -273,11 +272,11 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas3" alt="">
+                                    <img src="assets/images/men-03.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Addidas</h4>
-                                    <span>Ksh 00.00</span>
+                                    <h4>Love Nana ‘20</h4>
+                                    <span>$150.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -296,11 +295,11 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/addidas1" alt="">
+                                    <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Addidas1</h4>
-                                    <span>Ksh 00.00</span>
+                                    <h4>Classic Spring</h4>
+                                    <span>$120.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -317,7 +316,7 @@ https://templatemo.com/tm-571-hexashop
         </div>
     </section>
     <!-- ***** Men Area Ends ***** -->
-
+   
     <!-- ***** Women Area Starts ***** -->
     <section class="section" id="women">
         <div class="container">
