--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/addidas-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Classic Spring</h4>
+                                    <h4>Addidas</h4>
                                     <span>$120.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -252,7 +252,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/addidas-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Air Force 1 X</h4>
+                                    <h4>Addidas</h4>
                                     <span>$90.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -275,7 +275,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/addidas-03.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Love Nana ‘20</h4>
+                                    <h4>Addidas</h4>
                                     <span>$150.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -298,7 +298,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/addidas-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Classic Spring</h4>
+                                    <h4>Addidas</h4>
                                     <span>$120.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
