--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans1.jpg" alt="">
+                                    <img src="assets/images/jordans-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Jordans</h4>
@@ -366,7 +366,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans2.jpg" alt="">
+                                    <img src="assets/images/jordans-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>jordans</h4>
@@ -389,7 +389,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/nikes.jpg" alt="">
+                                    <img src="assets/images/nikes-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Spring Collection</h4>
@@ -415,7 +415,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/women-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Classic Spring</h4>
+                                    <h4>Nikes</h4>
                                     <span>$120.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
