--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/women-01.jpg" alt="">
+                                    <img src="assets/images/jordans-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Nikes</h4>
