--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h2>Men's Latest</h2>
+                        <h2>New arrivals</h2>
                         <span>Details to details is what makes Hexashop different from the other themes.</span>
                     </div>
                 </div>
@@ -230,7 +230,7 @@ https://templatemo.com/tm-571-hexashop
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
-                                    <span>$120.00</span>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -253,7 +253,7 @@ https://templatemo.com/tm-571-hexashop
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
-                                    <span>$90.00</span>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -276,7 +276,7 @@ https://templatemo.com/tm-571-hexashop
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
-                                    <span>$150.00</span>
+                                    <span>Khs 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -299,7 +299,7 @@ https://templatemo.com/tm-571-hexashop
                                 </div>
                                 <div class="down-content">
                                     <h4>Addidas</h4>
-                                    <span>$120.00</span>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -369,8 +369,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/jordans-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>jordans</h4>
-                                    <span>Ksh 0045.00</span>
+                                    <h4>Jordans</h4>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -392,8 +392,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/nikes-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Spring Collection</h4>
-                                    <span>$130.00</span>
+                                    <h4>Nikes</h4>
+                                    <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
