--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/nikes-07.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Nikes</h4>
+                                    <h4>Nike</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
