--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/jordans-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Jordans</h4>
+                                    <h4>Air jordan</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -622,7 +622,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/jordans-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Jordans</h4>
+                                    <h4>Air jordans</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -645,7 +645,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/nikes-03.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Nikes</h4>
+                                    <h4>Nike</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -668,7 +668,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/jordans-04.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Jordans</h4>
+                                    <h4>Air jordans</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -688,7 +688,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans-05.jpg" alt="">
+                                    <img src="assets/images/jordans-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Jordans</h4>
@@ -760,7 +760,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/nikes-04.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Jordans</h4>
+                                    <h4>Nike</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -780,7 +780,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans-09.jpg" alt="">
+                                    <img src="assets/images/nikes-09.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Nikes</h4>
@@ -851,17 +851,7 @@ https://templatemo.com/tm-571-hexashop
                                     </div>
                                     <img src="assets/images/jordans-02.jpg" alt="">
                                 </div>
-                                <div class="down-content">
-                                    <h4>Nikes</h4>
-                                    <span>Ksh 00.00</span>
-                                    <ul class="stars">
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </div>
+                               
                             </div>
                         </div>
                     </div>
