--- a/index.html
+++ b/index.html
@@ -851,7 +851,17 @@ https://templatemo.com/tm-571-hexashop
                                     </div>
                                     <img src="assets/images/jordans-02.jpg" alt="">
                                 </div>
-                               
+                                <div class="down-content">
+                                    <h4>Nikes</h4>
+                                    <span>Ksh 00.00</span>
+                                    <ul class="stars">
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
