--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/nikes-03.jpg" alt="">
+                                    <img src="assets/images/nikes-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Nike</h4>
@@ -668,7 +668,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/jordans-04.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Air jordans</h4>
+                                    <h4>Jordans</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -688,7 +688,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans-02.jpg" alt="">
+                                    <img src="assets/images/jordan-05.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Jordans</h4>
@@ -711,7 +711,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/nikes-01.jpg" alt="">
+                                    <img src="assets/images/nikes-08.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Nikes</h4>
@@ -780,7 +780,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/nikes-09.jpg" alt="">
+                                    <img src="assets/images/nikes-12.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Nikes</h4>
@@ -803,7 +803,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/nikes-10.jpg" alt="">
+                                    <img src="assets/images/jordans-06.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Jordans</h4>
@@ -826,10 +826,10 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/jordans-02.jpg" alt="">
+                                    <img src="assets/images/nikes-05.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Jordans</h4>
+                                    <h4>Air jordans</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -852,7 +852,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/jordans-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Nikes</h4>
+                                    <h4>Air jordans</h4>
                                     <span>Ksh 00.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -897,7 +897,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/kid-01.jpg" alt="">
+                                    <img src="assets/images/rubber-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>School Collection</h4>
@@ -920,7 +920,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/kid-02.jpg" alt="">
+                                    <img src="assets/images/rubber-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Summer Cap</h4>
@@ -943,7 +943,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/kid-03.jpg" alt="">
+                                    <img src="assets/images/rubber-03.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Classic Kid</h4>
@@ -966,7 +966,7 @@ https://templatemo.com/tm-571-hexashop
                                             <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/kid-01.jpg" alt="">
+                                    <img src="assets/images/rubber-04.jpg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Classic Spring</h4>
